<resources>
    <string name="app_name">Taxi Screen</string>
    <string name="please_wait">Please Wait...</string>
    <string name="intent_action_turnon">com.fitc.wifihotspot.TURN_ON</string>
    <string name="intent_action_turnoff">com.fitc.wifihotspot.TURN_OFF</string>
    <string name="intent_data_scheme">wifihotspot</string>
    <string name="intent_data_host_turnon">turnon</string>
    <string name="intent_data_host_turnoff">turnoff</string>
    <string name="notification_chnnl">Hot Spot</string>
    <string name="notification_chnnl_location_descr">Keeps wifi hot spot persistent</string>
    <string name="learn_more">Learn more</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="wifi_name">Routes</string>
    <string name="wifi_password">12345678</string>
    <string name="phone_permission_required">Phone Permission required</string>
    <string name="enable_phone_permission_from_app_settings_is_required_to_get_device_information">Enable phone permission from app settings is required to get device information</string>
    <string name="open_settings">Open settings</string>
    <string name="later">Later</string>
    <string name="click_here_to_get_serial_number">Click here to get serial number</string>
    <string name="click_here_to_get_sim_card_number">Click here to get SIM card number</string>
    <string name="list_type_key">List_Type_Key</string>
    <string name="search_for_taxi_offices">Search for taxi offices</string>
    <string name="search_plate_numbers">Search plate numbers</string>
    <string name="login_error_title">Login error</string>
    <string name="registration_error_title">Registration error</string>
    <string name="vehicle_information_error_title">Vehicle information error</string>
    <string name="content_error_title">Content error</string>
    <string name="token_is_null_value">Token is null value</string>
    <string name="device_id_is_null_value">Device ID is null value</string>
    <string name="no_data_found">NO DATA FOUND</string>
    <string name="network_Issue">NETWORK ISSUE</string>
    <string name="conversion_Issue">CONVERSION ISSUE</string>
    <string name="unknown_error">UNKNOWN ERROR</string>
    <string name="complete_required_data">Complete required data, please!</string>
    <string name="institutions">Institutions</string>
    <string name="vehicles">Vehicles</string>
    <string name="free_wifi">FREE WIFI</string>
    <string name="device_id">Device ID</string>
    <string name="sim_serial_number">SIM serial number</string>
    <string name="sign_in">Sign in</string>
    <string name="with_your_routes_account">with your Routes Account</string>
    <string name="user_name">User Name</string>
    <string name="email_error">Email Error</string>
    <string name="password">Password</string>
    <string name="password_error">Password Error</string>
    <string name="call_support_22020406">Call support +22020406</string>
    <string name="next">Next</string>
    <string name="almost_done">Almost done ..</string>
    <string name="vehicle">Vehicle</string>
    <string name="vehicle_institution">Institution</string>
    <string name="select_vehicle_institution">* Select vehicle institution</string>
    <string name="select_vehicle_plate_number">* Select vehicle plate number</string>
    <string name="taxi_plate_number">Plate number</string>
    <string name="register">Register</string>
    <string name="kwd">KWD</string>
    <string name="waiting_payment">WAITING PAYMENT</string>
    <string name="open_camera_scan_qr_code_to_pay_taxi_fare_and_learn_more">Open camera scan qrcode to pay taxi fare and learn more</string>
    <string name="copyright_2020_routes_co">Copy right 2021 Routes company</string>
    <string name="payment_success">PAYMENT SUCCESSFUL</string>
    <string name="payment_success_description">Thank you for paying through Routes Pay</string>


    <!-- Bus Payment -->
    <string name="rejected">Rejected</string>
    <string name="approved">Approved</string>
    <string name="scan_your_qr_code_or_nfc">Scan your <b>QR Code</b> or <b>NFC</b></string>
    <string name="payment_approved_message">You will be receiving a notification for a <b>digital ticket</b></string>
    <string name="qrcode_expired_message">Your qr code is expired, please make sure to present from the <b>App</b></string>
    <string name="select_ticket_to_complete"><b>Select</b> ticket to complete \n 👇 </string>
    <string name="select_ticket_then_scan_your_QR_Codeor_NFC"><b>Select</b> ticket then scan your <b>QR Code</b> \n or <b>NFC</b></string>

</resources>