<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".kotlin.View.RegistrationScreen.RegistrationActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/MyToolBar"
        style="@style/AppTheme.CustomTextViewToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_6sdp"
        app:layout_constraintBottom_toTopOf="@id/info_layout"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintVertical_chainStyle="packed"/>

            <ScrollView
                android:id="@+id/info_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fillViewport="true"
                app:layout_constraintTop_toBottomOf="@id/MyToolBar"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintBottom_toBottomOf="@id/guidelineBottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_9sdp">

                    <TextView
                        style="@style/AppTheme.CustomTextViewTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_12sdp"
                        android:text="@string/almost_done"
                        android:textSize="@dimen/_16ssp" />

                    <TextView
                        style="@style/AppTheme.CustomTextViewTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12ssp"
                        android:layout_marginBottom="@dimen/_15ssp"
                        android:text="@string/vehicle" />

                    <TextView
                        android:id="@+id/taxiOffice_tv"
                        style="@style/AppTheme.CustomTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:background="@drawable/tab_text_selector"
                        android:drawableRight="@drawable/ic_right_arrow"
                        android:textSize="@dimen/_12ssp"
                        android:hint="@string/vehicle_institution"
                        android:nextFocusDown="@id/password_et" />

                    <TextView
                        android:id="@+id/taxiOffice_error_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:gravity="start"
                        android:text="@string/select_vehicle_institution"
                        android:textColor="@color/red"
                        android:textSize="@dimen/_9ssp"
                        android:textStyle="normal"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/taxiPlateNumber_tv"
                        style="@style/AppTheme.CustomTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:background="@drawable/tab_text_selector"
                        android:drawableRight="@drawable/ic_right_arrow"
                        android:textSize="@dimen/_12ssp"
                        android:hint="@string/taxi_plate_number"
                        android:nextFocusDown="@id/password_et" />

                    <TextView
                        android:id="@+id/taxiPlateNumber_error_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_18sdp"
                        android:gravity="start"
                        android:text="@string/select_vehicle_plate_number"
                        android:textColor="@color/red"
                        android:textSize="@dimen/_9ssp"
                        android:textStyle="normal"
                        android:visibility="invisible" />

                    <TextView
                        style="@style/AppTheme.CustomTextViewTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:textSize="@dimen/_12ssp"
                        android:layout_marginBottom="@dimen/_6sdp"
                        android:text="@string/device_id" />

                    <TextView
                        android:id="@+id/deviceId_tv"
                        style="@style/AppTheme.CustomEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:textSize="@dimen/_12ssp"
                        android:background="@drawable/grey_border_text_view"
                        android:hint="@string/device_id"
                        android:nextFocusDown="@id/password_et" />

                    <TextView
                        style="@style/AppTheme.CustomTextViewTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:textSize="@dimen/_12ssp"
                        android:layout_marginBottom="@dimen/_6sdp"
                        android:text="@string/sim_serial_number" />

                    <TextView
                        android:id="@+id/SimSerialNumber_tv"
                        style="@style/AppTheme.CustomEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12ssp"
                        android:background="@drawable/grey_border_text_view"
                        android:hint="@string/sim_serial_number"
                        android:nextFocusDown="@id/password_et" />
                    <Button
                        android:id="@+id/register_btn"
                        style="@style/AppTheme.CustomButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textSize="@dimen/_14ssp"
                        android:layout_marginTop="@dimen/_22sdp"/>

                </LinearLayout>

            </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>