<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <ImageView
        android:id="@+id/routes_logo_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/routes_icon_light"
        app:layout_constraintBottom_toTopOf="@id/signIn_tv"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/signIn_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/btn_learnMore"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/routes_logo_iv" />

    <LinearLayout
        android:id="@+id/btn_learnMore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/userName_et"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/signIn_tv">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/with_your_routes_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/learn_more"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_10ssp"
            android:textStyle="normal"
            android:layout_marginStart="@dimen/_5sdp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/userName_et"
        style="@style/AppTheme.CustomEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_13sdp"
        android:hint="@string/user_name"
        android:imeOptions="actionNext"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@id/userName_error_tv"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/btn_learnMore" />

    <TextView
        android:id="@+id/userName_error_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:gravity="start"
        android:text="@string/email_error"
        android:textColor="@color/red"
        android:textSize="@dimen/_9ssp"
        android:textStyle="normal"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/password_et_container"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/userName_et" />

    <RelativeLayout
        android:id="@+id/password_et_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/password_error_tv"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/userName_error_tv"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="3dp">
        <com.routesme.vehicles.view.utils.ShowAndHidePassword
            android:id="@+id/password_et"
            style="@style/AppTheme.CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textSize="@dimen/_12ssp"
            app:drawable_hide="@drawable/ic_visibility_off"
            app:drawable_show="@drawable/ic_visibility_on" />
    </RelativeLayout>


    <TextView
        android:id="@+id/password_error_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        android:gravity="start"
        android:text="@string/password_error"
        android:textColor="@color/red"
        android:textSize="@dimen/_9ssp"
        android:textStyle="normal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/password_et_container" />

    <Button
        android:id="@+id/btn_next"
        style="@style/AppTheme.CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/password_error_tv" />

    <TextView
        android:id="@+id/call_support_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/call_support_22020406"
        android:textColor="#8a000000"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/btn_next"
        app:layout_constraintEnd_toStartOf="@+id/btn_next"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="@id/btn_next" />


    <TextView
        android:id="@+id/appVersion_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/_9ssp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="v1.0.1"/>

    <TextView
        android:id="@+id/simStatus_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/_9ssp"
        android:textStyle="normal"
        android:text="SIM Status"
        app:layout_constraintTop_toTopOf="@id/appVersion_tv"
        app:layout_constraintBottom_toBottomOf="@id/appVersion_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_10sdp"/>

    <TextView
        android:id="@+id/simSerialNumber_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/_9ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@id/simStatus_tv"
        android:layout_marginStart="@dimen/_4sdp"
        app:layout_constraintTop_toTopOf="@id/simStatus_tv"
        app:layout_constraintBottom_toBottomOf="@id/simStatus_tv"/>

</androidx.constraintlayout.widget.ConstraintLayout>